# covibe

./: .coveragerc  .dockerignore  .env.example  .gitignore  CLAUDE.md  Covibe_API_Postman_Collection.json  Dockerfile.backend  QUICK_START.md  README.md  claude.md.backup-1753281373930  docker-compose.dev.yml  docker-compose.fullstack.yml  docker-compose.monitoring.yml  docker-compose.yml  main.py  package.json  personality_system.db  pyproject.toml  pytest.ini  run_tests.py  start.py  start.sh  validate_test_suite.py
.github/workflows/: ci.yml  release.yml  test.yml
.kiro/specs/agent-personality-system/: design.md  requirements.md  tasks.md
.kiro/specs/ide-export-system/: design.md  requirements.md  tasks.md
.kiro/specs/llm-driven-research/: design.md  requirements.md  tasks.md
.kiro/specs/vscode-extension-packaging/: design.md  requirements.md  tasks.md
config/llm/: providers.yaml
config/prompts/: personality_analysis.yaml  test_prompt.yaml
docs/: README.md
docs/api/: openapi.yaml
docs/deployment/: README.md  llm-deployment.md
docs/setup/: installation.md  llm-configuration.md  prompt-templates.md  quick-start.md
docs/troubleshooting/: llm-issues.md
docs/user-guide/: README.md
monitoring/: prometheus.yml  promtail.yml
scripts/: config-cli.py  deploy.sh  start-dev.sh
src/covibe.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/covibe/api/: chat.py  export.py  main.py  monitoring.py  personality.py  personality_backup.py
src/covibe/cli/: config_manager.py
src/covibe/integrations/: ide_detection.py  ide_writers.py
src/covibe/models/: core.py  database.py  llm.py
src/covibe/services/: chat_processor.py  context_generation.py  cost_optimizer.py  export_generator.py  export_metadata.py  format_converter.py  input_processing.py  llm_cache.py  llm_client.py  llm_provider_config.py  orchestration.py  persistence.py  (+2 more)
tests/: README.md  conftest.py
tests/e2e/: conftest.py  test_llm_personality_workflow.py  test_personality_workflow.py
tests/integration/: test_advanced_input_api.py  test_api_basic.py  test_api_endpoints.py  test_context_api.py  test_database_integration.py  test_ide_integration.py  test_llm_api_integration.py  test_llm_fallback_scenarios.py  test_orchestration_integration.py  test_research_api.py
tests/load/: __init__.py  load_test_config.py  locustfile.py
tests/performance/: test_personality_benchmarks.py
tests/security/: test_input_validation.py  test_llm_security.py
tests/unit/: test_chat_processor.py  test_config_management.py  test_context_generation.py  test_cost_optimizer.py  test_error_handling.py  test_error_handling_enhanced.py  test_ide_detection.py  test_ide_writers.py  test_ide_writers_llm_enhancement.py  test_input_processing.py  test_llm_cache.py  test_llm_client.py  test_llm_models.py  test_llm_provider_config.py  test_monitoring.py  test_orchestration.py  test_persistence.py  test_prompt_manager.py  test_research.py  test_validation.py
vscode-extension/: .vscodeignore  README.md  covibe-personality-system-0.1.0.vsix  covibe-personality-system-0.2.0.vsix  esbuild.config.js  package-lock.json  package.json  tsconfig.json
vscode-extension/src/: extension.ts
web/: .env  Dockerfile  nginx.conf  package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo
web/src/: App.css  App.tsx
~/repos/covibe/: README.md  pyproject.toml
~/repos/covibe/src/covibe/: __init__.py
~/repos/covibe/src/covibe/api/: __init__.py
~/repos/covibe/src/covibe/integrations/: __init__.py
~/repos/covibe/src/covibe/utils/: validation.py
~/repos/covibe/tests/: __init__.py
~/repos/covibe/tests/unit/: test_validation.py
(+67 files in other folders)
